// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changeGeneSelection action Dispatches deselect event when select event specified 1`] = `
Object {
  "payload": Object {
    "experimentId": "1234",
    "genes": Array [
      "a",
      "b",
      "c",
      "d",
    ],
  },
  "type": "genes/deselect",
}
`;

exports[`changeGeneSelection action Dispatches select event when select event specified 1`] = `
Object {
  "payload": Object {
    "experimentId": "1234",
    "genes": Array [
      "a",
      "b",
      "c",
      "d",
    ],
  },
  "type": "genes/select",
}
`;
